# local-model-cli

./: LICENSE  README.md  pyproject.toml  setup.cfg
local_model/: __init__.py  cli.py
