[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local-model-cli"
version = "0.1.0"
description = "Manage local LLM inference servers (llama.cpp, PrismML, etc.)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ShakClaw" }]
keywords = ["llm", "inference", "llama-cpp", "gguf", "local"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
local-model = "local_model.cli:main"

[project.urls]
Homepage = "https://github.com/shakclaw-bot/local-model-cli"
