[metadata]
name = local-model-cli
version = 0.1.0
description = Manage local LLM inference servers (llama.cpp, PrismML, etc.)
long_description = file: README.md
long_description_content_type = text/markdown
author = ShakClaw
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = local_model
python_requires = >=3.9

[options.entry_points]
console_scripts =
    local-model = local_model.cli:main
